[package]
name = "minwebgl_gltf_viewer"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>"
]

[dependencies]

minwebgl = { workspace = true, features = [ "future", "math", "diagnostics" ] } # Features already here
mingl = { workspace = true, features = [ "camera_orbit_controls" ] } # Features already here
gltf = { workspace = true, features = [ "import", "KHR_materials_specular" ] } # Features already here
glam = { workspace = true }
zune-hdr = { workspace = true }

asbytes = { workspace = true }

[dependencies.uuid]
workspace = true
# Lets you generate random UUIDs
features = [ # Features already here
  "v4",
  "js"
]

[dependencies.web-sys]
workspace = true
features = [ # Features already here
  'MouseEvent',
  'PointerEvent',
  'WheelEvent',
  'WebGlTexture',
  'HtmlImageElement',
  'Blob',
  'BlobPropertyBag',
  'Url',
  'WebGlFramebuffer'
]
