[package]
name = "hexagonal_grid"
version = "0.1.0"
edition = "2024"

[dependencies]
minwebgl = { workspace = true, features = ["math"] }
web-sys = { workspace = true, features = [
  "DomRect",
  "MouseEvent",
  "KeyboardEvent",
  "HtmlInputElement",
  "HtmlButtonElement",
] }
tiles_tools = { workspace = true }
pathfinding = { workspace = true } # qqq : all dependencies come from workspace cargo file
browser_input = { workspace = true }
