[package]
name = "hexagonal_grid"
version = "0.1.0"
edition = "2024"

[dependencies]
minwebgl = { workspace = true, features = ["math"] }
web-sys = { workspace = true, features = [
  "DomRect",
  "MouseEvent",
  "KeyboardEvent",
  "HtmlInputElement",
  "HtmlButtonElement",
] }
tiles_tools = { workspace = true }
pathfinding = "4.14.0"
browser_input = { workspace = true }
