[package]
name = "hexagonal_grid"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
minwebgl = { workspace = true, features = ["math"] }
web-sys = { workspace = true, features = [
  "DomRect",
  "MouseEvent",
  "KeyboardEvent",
  "HtmlInputElement",
  "HtmlButtonElement",
] }
tiles_tools = { workspace = true }
pathfinding = { workspace = true }
browser_input = { workspace = true }
