[package]
name = "hexagonal_map"
version = "0.1.0"
edition = "2024"

[dependencies]
web-sys = { workspace = true, features = [
  "WebGlTexture",
  "HtmlImageElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "HtmlButtonElement",
  "HtmlAnchorElement",
  "BlobPropertyBag",
  "Blob",
  "Url",
  "DragEvent",
  "DataTransfer",
  "File",
  "FileList",
  "FileReader",
] }
minwebgl = { workspace = true, features = ["math"] }
browser_input.workspace = true
renderer.workspace = true
tiles_tools.workspace = true
quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
serde_json = "1.0.140"

[lints]
workspace = true
