[package]
name = "hexagonal_map"
version = "0.1.0"
edition = "2024"

[dependencies]
web-sys = { workspace = true, features = [
  "WebGlTexture",
  "HtmlImageElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "HtmlButtonElement",
  "HtmlAnchorElement",
  "BlobPropertyBag",
  "Blob",
  "Url",
  "DragEvent",
  "DataTransfer",
  "File",
  "FileList",
  "FileReader",
] }
quick-xml = { workspace = true, features = ["serialize"] }
minwebgl = { workspace = true, features = ["math"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
browser_input.workspace = true
tiles_tools.workspace = true
serde_json.workspace = true
renderer.workspace = true

[lints]
workspace = true
