[package]
name = "hexagonal_map"
version = "0.1.0"
edition = "2024"

[dependencies]
web-sys = { workspace = true, features = [
  "WebGlTexture",
  "HtmlImageElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "HtmlButtonElement",
  "HtmlAnchorElement",
  "DragEvent",
  "DataTransfer",
  "File",
  "FileList",
  "FileReader",
] }
minwebgl = { workspace = true, features = ["math"] }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
browser_input.workspace = true
tiles_tools.workspace = true
serde_json.workspace = true
serde_with.workspace = true
rustc-hash.workspace = true
renderer.workspace = true
tilemap_renderer = { workspace = true, features = ["adapter-webgl"] }

[lints]
workspace = true
