[package]
name = "lottie_surface_rendering"
version = "0.1.0"
edition = "2021"
authors = [ 
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>",
  "Bilan Vadym <vadym.b@obox.systems>" 
]

[lints]
workspace = true

[dependencies]
mod_interface = { workspace = true }
minwebgl = { workspace = true, features = [ "future", "math", "diagnostics" ] }
mingl = { workspace = true, features = [ "camera_orbit_controls" ] }
gltf = { workspace = true, features = [ "import", "KHR_materials_specular" ] }
renderer = { workspace = true }
canvas_renderer = { workspace = true }
geometry_generation = { workspace = true }
kurbo = { workspace = true }
zune-hdr = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true, features = [ "wasm_js" ] }
interpoli = { workspace = true }
peniko = { workspace = true }
color = { workspace = true }
earcutr = { workspace = true }
former = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  'MouseEvent',
  'PointerEvent',
  'WheelEvent',
  'WebGlTexture',
  'HtmlImageElement',
  'Blob',
  'BlobPropertyBag',
  'Url',
  'WebGlFramebuffer',
  'WebGlRenderbuffer'
]
