[package]
name = "mapgen_tiles_rendering"
version = "0.1.0"
edition = "2021"
authors = [ "Kostiantyn Mysnyk <wandalen@obox.systems>" ]
license = "MIT"

[dependencies]
minwebgl = { workspace = true }
ndarray_cg = { workspace = true }
web-sys = { workspace = true, features = [
  'Document', 
  'Element', 
  'HtmlCanvasElement', 
  'Window',
  'WebGlTexture',
  'CanvasRenderingContext2d',
  'HtmlImageElement',
  'DomRect',
] }