[package]
name = "outline"
version = "0.1.0"
edition = "2021"
authors = [ 
    "Kostiantyn Mysnyk <wandalen@obox.systems>",
    "Bilan Vadym <vadym.b@obox.systems>"
]

[dependencies]
#browser_input = { git = "https://https://github.com/Wandalen/cgtools.git", rev = "72cfcb191ecd05c657726692634cbed829b6136c" }
minwebgl = { workspace = true, features = [ "future" ] }
ndarray_cg = { workspace = true }
gltf = "1.4" 
rand = "0.8.5"
getrandom = { version = "0.2", features = [ "js" ] }

[dependencies.web-sys]
workspace = true
features = [
    'Document',
    'Window',
    'HtmlCanvasElement',
    'WebGl2RenderingContext',
    'WebGlUniformLocation',
    'WebGlActiveInfo',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGlSync',
    'console',
    'Performance',
    'HtmlImageElement',
    'ImageBitmap',
    'Url',
    'WebGlTexture', 
    'WebGlFramebuffer', 
]