[package]
name = "minwebgl_obj_load"
version = "0.1.0"
edition = "2021"
authors = [ 
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>" 
]

[dependencies]

minwebgl = { workspace = true, features = [ "future" ] }
cgmath = "0.18.0"
tobj =  { workspace = true, default-features = false, features = [ "async" ] }

[dependencies.web-sys]
workspace = true
features = [
  'RequestInit',
  'RequestMode',
  'Request',
  'Response',
  'Location'
]
