[package]
name = "minwebgl_obj_viewer"
version = "0.1.0"
edition = "2021"
authors = [ 
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>" 
]

[dependencies]

minwebgl = { workspace = true, features = [ "future" ] }
glam = "0.29.0"
tobj =  { workspace = true, default-features = false, features = [ "async" ] }
mingl = { workspace = true, features = [ "camera_orbit_controls", "diagnostics" ] }

[dependencies.web-sys]
workspace = true
features = [
  'MouseEvent',
  'PointerEvent',
  'WheelEvent',
  'WebGlTexture',
  'HtmlImageElement'
]
