[package]
name = "object_picking"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ['js'] }
ndarray_cg = { workspace = true }
minwebgl = { workspace = true, features = ['future'] }
tobj = { workspace = true, features = ['async'] }
[dependencies.web-sys]
features = [
  'HtmlImageElement',
  'WebGlTexture',
  'WebGlFramebuffer',
  'WebGlRenderbuffer',
  'MouseEvent',
  'DomRect',
]
workspace = true
