[package]
name = "object_picking"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true } # Features already here
getrandom = { workspace = true, features = ['js'] } # Features already here
ndarray_cg = { workspace = true }
minwebgl = { workspace = true, features = ['future'] } # Features already here
tobj = { workspace = true, features = ['async'] } # Features already here
[dependencies.web-sys]
features = [ # Features already here
  'HtmlImageElement',
  'WebGlTexture',
  'WebGlFramebuffer',
  'WebGlRenderbuffer',
  'MouseEvent',
  'DomRect',
]
workspace = true
