[package]
name = "raycaster"
version = "0.1.0"
edition = "2021"

[dependencies]

# glam = "0.29.0"
tobj = { workspace = true, default-features = false, features = ["async"] }
# mingl = { workspace = true, features = [ "camera_orbit_controls", "diagnostics" ] }

minwebgl = { workspace = true }
[dependencies.web-sys]
workspace = true
features = [

  'KeyboardEvent',
  'WebGlTexture',
  'HtmlImageElement',
]
