[package]
name = "renderer_with_outlines"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>",
  "Bilan Vadym <vadym.b@obox.systems>"
]

[lints]
workspace = true

[dependencies]
minwebgl = { workspace = true, features = [ "future", "math", "diagnostics" ] }
mingl = { workspace = true, features = [ "camera_orbit_controls" ] }
gltf = { workspace = true, features = [ "import", "KHR_materials_specular" ] }
renderer = { workspace = true }
zune-hdr = { workspace = true }
rustc-hash = { workspace = true }
rand = { version = "0.8.5" }
getrandom = { version = "0.2.16", features = [ "js" ] }

[dependencies.web-sys]
workspace = true
features = [
  'MouseEvent',
  'PointerEvent',
  'WheelEvent',
  'WebGlTexture',
  'HtmlImageElement',
  'Blob',
  'BlobPropertyBag',
  'Url',
  'WebGlFramebuffer',
  'WebGlRenderbuffer',
  'HtmlInputElement'
]
